замінив назву кнопки

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="answer-button">18</div>
         </div>
         <div class="skip">
-            SKIP
+            skip
         </div>
         <div id="timer">1:00</div>
     </div>
